--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,8 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+sonarqube {
+    	properties {
+        property 'sonar.host.url', 'http://3.108.215.208:9000'
+    }
+}
