--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id 'org.sonarqube' version '3.3'
+	id 'jacoco'
 }
 
 group = 'com.jhooq'
@@ -35,6 +36,10 @@ sonarqube {
     }
 }
 
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+    reportsDir = file("$buildDir/reports/jacoco")
+}
 jacocoTestReport {
     reports {
         xml.enabled true
