--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id 'org.sonarqube' version '3.3'
-	id 'jacoco'
 }
 
 group = 'com.jhooq'
@@ -36,6 +35,7 @@ sonarqube {
     }
 }
 
+apply plugin: 'jacoco'
 jacoco {
     toolVersion = "0.7.6.201602180812"
     reportsDir = file("$buildDir/reports/jacoco")
